img format to webp

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           ><span class="burgerText">BURGER</span>
         </h1>
         <div class="imgContainer">
-          <img class="heroImg" src="./img/Mega.png" alt="Burger" />
+          <img class="heroImg" src="./img/Mega.webp" alt="Burger" />
           <div class="imgShadow"></div>
         </div>
         <p class="heroSubtitle">¡2x1 en Combos Mega Burger!</p>
@@ -93,15 +93,15 @@
                     <p class="itemDiscount">2x1</p>
                     <img
                       class="soda"
-                      src="./img/Soda.png"
+                      src="./img/Soda.webp"
                       alt="bebida"
                       data-atropos-offset="-5"
                     />
 
-                    <img class="burger" src="./img/Mega.png" />
+                    <img class="burger" src="./img/Mega.webp" />
                     <img
                       class="fries"
-                      src="./img/Fries.png"
+                      src="./img/Fries.webp"
                       alt="papas fritas"
                       data-atropos-offset="-5"
                     />
@@ -120,7 +120,7 @@
               </button>
               <h4 class="brand">Mega Burger</h4>
               <img
-                src="./img/Mega.png"
+                src="./img/Mega.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -150,15 +150,15 @@
                     <p class="itemDiscount">25% OFF</p>
                     <img
                       class="soda"
-                      src="./img/Soda.png"
+                      src="./img/Soda.webp"
                       alt="bebida"
                       data-atropos-offset="-5"
                     />
 
-                    <img class="burger" src="./img/Chef.png" />
+                    <img class="burger" src="./img/Chef.webp" />
                     <img
                       class="fries"
-                      src="./img/Fries.png"
+                      src="./img/Fries.webp"
                       alt="papas fritas"
                       data-atropos-offset="-5"
                     />
@@ -177,7 +177,7 @@
               </button>
               <h4 class="brand">Clásico del Chef</h4>
               <img
-                src="./img/Chef.png"
+                src="./img/Chef.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -205,7 +205,7 @@
                 <div class="atropos-inner">
                   <h3 class="burgerTitle">BBQ Supremo</h3>
                   <div class="card-burger">
-                    <img class="burgerBackground" src="./img/BBQ.jpeg" />
+                    <img class="burgerBackground" src="./img/BBQ.webp" />
                   </div>
                 </div>
               </div>
@@ -221,7 +221,7 @@
               </button>
               <h4 class="brand">BBQ Supremo</h4>
               <img
-                src="./img/BBQ-noBackground.png"
+                src="./img/BBQ-noBackground.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -248,7 +248,7 @@
                   <div class="card-burger">
                     <img
                       class="burgerBackground"
-                      src="./img/Mediterranean.jpeg"
+                      src="./img/Mediterranean.webp"
                     />
                   </div>
                 </div>
@@ -265,7 +265,7 @@
               </button>
               <h4 class="brand">Mediterránea</h4>
               <img
-                src="./img/Mediterranean-noBackground.png"
+                src="./img/Mediterranean-noBackground.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -292,7 +292,7 @@
                 <div class="atropos-inner">
                   <h3 class="burgerTitle">Mexicana</h3>
                   <div class="card-burger">
-                    <img class="burgerBackground" src="./img/Mexicana.jpeg" />
+                    <img class="burgerBackground" src="./img/Mexicana.webp" />
                   </div>
                 </div>
               </div>
@@ -308,7 +308,7 @@
               </button>
               <h4 class="brand">Mexicana</h4>
               <img
-                src="./img/Mexicana-noBackground.png"
+                src="./img/Mexicana-noBackground.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -340,7 +340,7 @@
                   <div class="card-burger">
                     <img
                       class="burgerBackground"
-                      src="./img/Extreme Spicy.jpeg"
+                      src="./img/Extreme Spicy.webp"
                     />
                   </div>
                 </div>
@@ -357,7 +357,7 @@
               </button>
               <h4 class="brand">Picante Extremo</h4>
               <img
-                src="./img/Extreme Spicy-noBackground.png"
+                src="./img/Extreme Spicy-noBackground.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -387,7 +387,7 @@
                 <div class="atropos-inner">
                   <h3 class="burgerTitle">Vegetariana</h3>
                   <div class="card-burger">
-                    <img class="burgerBackground" src="./img/Vegetarian.jpeg" />
+                    <img class="burgerBackground" src="./img/Vegetarian.webp" />
                   </div>
                 </div>
               </div>
@@ -403,7 +403,7 @@
               </button>
               <h4 class="brand">Vegetariana</h4>
               <img
-                src="./img/Vegetarian-noBackground.png"
+                src="./img/Vegetarian-noBackground.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
@@ -432,7 +432,7 @@
                 <div class="atropos-inner">
                   <h3 class="burgerTitle">Tropical</h3>
                   <div class="card-burger">
-                    <img class="burgerBackground" src="./img/Tropical.jpeg" />
+                    <img class="burgerBackground" src="./img/Tropical.webp" />
                   </div>
                 </div>
               </div>
@@ -448,7 +448,7 @@
               </button>
               <h4 class="brand">Tropical</h4>
               <img
-                src="./img/Tropical-noBackground.png"
+                src="./img/Tropical-noBackground.webp"
                 class="dialogBurger"
                 alt="hamburguesa"
               />
