--- a/about.html
+++ b/about.html
@@ -48,14 +48,14 @@
   </head>
   <body>
     <div class="transition-slideIn"></div>
-    <nav class="navBar">
+    <header class="navBar">
       <h1 class="brand">Walter Burgers</h1>
-      <div class="nav">
+      <nav class="nav">
         <a href="/" id="home" class="navItem">Home</a>
         <a href="/about.html" id="about" class="navItem">Sobre Nosotros</a>
-      </div>
-      <div class="navMobile">
-        <input type="checkbox" id="navMenu" />
+      </nav>
+      <nav class="navMobile">
+        <input type="checkbox" id="navButton" />
         <ul class="navMenu">
           <li>
             <a href="/">
@@ -84,13 +84,13 @@
             </a>
           </li>
         </ul>
-        <label for="navMenu" class="hamburger">
+        <label for="navButton" class="hamburger">
           <span></span>
           <span></span>
           <span></span>
         </label>
-      </div>
-    </nav>
+      </nav>
+    </header>
     <main id="swup">
       <div class="about">
         <h2 class="aboutTitle">Sobre Nosotros</h2>
@@ -148,8 +148,8 @@
           ? document.getElementById("about").classList.add("active")
           : document.getElementById("about").classList.remove("active");
       };
-      //swup hooks
       setStyle();
+
       const setAtropos = () => {
         const myAtropos = Atropos({
           el: ".myAtropos",
@@ -159,10 +159,11 @@
           rotateYMax: 10,
         });
       };
+      //swup hooks
       swup.hooks.on("page:view", (visit) => {
         setStyle(visit.to.url);
         if (visit.to.url === "/") setAtropos();
-        document.getElementById("navMenu").checked = false;
+        document.getElementById("navButton").checked = false;
       });
     </script>
   </body>
