--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/"
+      content="https://tdansistod.github.io/Walter-Burgers/"
     />
     <meta property="og:title" content="Walter Burgers" />
     <meta
@@ -28,13 +28,13 @@
     />
     <meta
       property="og:image"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/img/walter burgers.webp"
+      content="https://tdansistod.github.io/Walter-Burgers/img/walter burgers.webp"
     />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:url"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/"
+      content="https://tdansistod.github.io/Walter-Burgers/"
     />
     <meta name="twitter:title" content="Walter Burgers" />
     <meta
@@ -43,7 +43,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/img/walter burgers.webp"
+      content="https://tdansistod.github.io/Walter-Burgers/img/walter burgers.webp"
     />
   </head>
   <body>
@@ -51,14 +51,24 @@
     <header class="navBar">
       <h1 class="brand">Walter Burgers</h1>
       <nav class="nav">
-        <a href="/" id="home" class="navItem">Home</a>
-        <a href="/about.html" id="about" class="navItem">Sobre Nosotros</a>
+        <a
+          href="https://tdansistod.github.io/Walter-Burgers/"
+          id="home"
+          class="navItem"
+          >Home</a
+        >
+        <a
+          href="https://tdansistod.github.io/Walter-Burgers/about.html"
+          id="about"
+          class="navItem"
+          >Sobre Nosotros</a
+        >
       </nav>
       <nav class="navMobile">
         <input type="checkbox" id="navButton" />
         <ul class="navMenu">
           <li>
-            <a href="/">
+            <a href="https://tdansistod.github.io/Walter-Burgers/">
               <img
                 src="./img/home icon.svg"
                 alt="home icon"
@@ -71,7 +81,7 @@
             </a>
           </li>
           <li>
-            <a href="/about.html">
+            <a href="https://tdansistod.github.io/Walter-Burgers/about.html">
               <img
                 src="./img/about icon.svg"
                 alt="about icon"
@@ -102,7 +112,11 @@
           <div class="imgShadow"></div>
         </div>
         <p class="heroSubtitle">¡2x1 en Combos Mega Burger!</p>
-        <a href="/#menu" class="button">Ver Menú ➤</a>
+        <a
+          href="https://tdansistod.github.io/Walter-Burgers/#menu"
+          class="button"
+          >Ver Menú ➤</a
+        >
       </div>
       <div class="textBackground">
         <div class="textRow">
@@ -581,8 +595,8 @@
             class="link"
             target="_blank"
             rel="noreferrer"
-            href="https://wdiseñoweb.com"
-            >W Diseño Web</a
+            href="https://tdansistod.github.io/Portfolio/"
+            >Waltersdorf lautaro</a
           >
         </p>
       </footer>
