--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/"
+      content="https://tdansistod.github.io/Walter-Burgers/"
     />
     <meta property="og:title" content="Walter Burgers" />
     <meta
@@ -28,13 +28,13 @@
     />
     <meta
       property="og:image"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/img/walter burgers.webp"
+      content="https://tdansistod.github.io/Walter-Burgers/img/walter burgers.webp"
     />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:url"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/"
+      content="https://tdansistod.github.io/Walter-Burgers/"
     />
     <meta name="twitter:title" content="Walter Burgers" />
     <meta
@@ -43,7 +43,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://walterburgers.xn--wdiseoweb-p6a.com/img/walter burgers.webp"
+      content="https://tdansistod.github.io/Walter-Burgers/img/walter burgers.webp"
     />
   </head>
   <body>
@@ -51,14 +51,24 @@
     <header class="navBar">
       <h1 class="brand">Walter Burgers</h1>
       <nav class="nav">
-        <a href="/" id="home" class="navItem">Home</a>
-        <a href="/about.html" id="about" class="navItem">Sobre Nosotros</a>
+        <a
+          href="https://tdansistod.github.io/Walter-Burgers/"
+          id="home"
+          class="navItem"
+          >Home</a
+        >
+        <a
+          href="https://tdansistod.github.io/Walter-Burgers/about.html"
+          id="about"
+          class="navItem"
+          >Sobre Nosotros</a
+        >
       </nav>
       <nav class="navMobile">
         <input type="checkbox" id="navButton" />
         <ul class="navMenu">
           <li>
-            <a href="/">
+            <a href="https://tdansistod.github.io/Walter-Burgers/">
               <img
                 src="./img/home icon.svg"
                 alt="home icon"
@@ -71,7 +81,7 @@
             </a>
           </li>
           <li>
-            <a href="/about.html">
+            <a href="https://tdansistod.github.io/Walter-Burgers/about.html">
               <img
                 src="./img/about icon.svg"
                 alt="about icon"
@@ -96,24 +106,22 @@
         <h2 class="aboutTitle">Sobre Nosotros</h2>
         <p>
           Walter Burgers no es una verdadera hamburguesería, sino un modelo
-          creado para mostrar nuestra habilidad en diseño web. En este espacio,
-          hemos puesto en práctica nuestra pasión por el diseño y la
-          funcionalidad, con el objetivo de demostrar cómo podemos crear una
-          presencia en línea atractiva y efectiva para negocios en el mundo
-          real. <br /><br />
-          Te invitamos a explorar nuestra web
+          creado para mostrar mi habilidad en diseño web. En este espacio, he
+          puesto en práctica mi pasión por el diseño y la funcionalidad, con el
+          objetivo de demostrar cómo puedo crear una presencia en línea
+          atractiva y efectiva para negocios en el mundo real. <br /><br />
+          Te invito a explorar mi
           <a
             class="link"
             target="_blank"
             rel="noreferrer"
-            href="https://wdiseñoweb.com"
-            >wdiseñoweb.com</a
+            href="https://tdansistod.github.io/Portfolio/"
+            >portafolio</a
           >
-          y descubrir cómo integramos elementos de diseño, navegación y
-          contenido para ofrecer una experiencia de usuario excepcional.<br /><br />
-          Si estás buscando crear una página web que refleje tu propio negocio
-          con la misma dedicación y detalle, ¡no dudes en contactarnos! Gracias
-          por visitarnos y disfrutar de nuestro mundo ficticio de hamburguesas.
+          y descubrir cómo integro elementos de diseño, navegación y contenido
+          para ofrecer una experiencia de usuario excepcional.<br /><br />
+          Gracias por visitar y disfrutar de este sitio ficticio de
+          hamburguesas.
         </p>
       </div>
       <footer class="footer">
@@ -124,8 +132,8 @@
             class="link"
             target="_blank"
             rel="noreferrer"
-            href="https://wdiseñoweb.com"
-            >W Diseño Web</a
+            href="https://tdansistod.github.io/Portfolio/"
+            >Waltersdorf lautaro</a
           >
         </p>
       </footer>
